--- a/resources/jade/index.jade
+++ b/resources/jade/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    div.container
+    .container#body
         h1 BCS Backup Utility
     
         ul.nav.nav-tabs
