--- a/resources/stylus/style.styl
+++ b/resources/stylus/style.styl
@@ -1,6 +1,9 @@
 body
-  padding: 5%
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+
+#body.container
+  padding: 5%
+
 
 a
   color: #00B7FF
