--- a/resources/jade/layout.jade
+++ b/resources/jade/layout.jade
@@ -19,10 +19,10 @@ html
                 a.navbar-brand(href="#") BCS Utilities
             .container
                 ul.nav.navbar-nav
-                    li.active
-                        a(href="http://lawn-chair.github.io/bcs-backup") Backup/Restore
                     li
-                        a(href="#") Recipes
+                        a(href="/bcs-recipes") Recipes
+                    li.active
+                        a(href="/bcs-backup") Backup/Restore
                     li
                         a(href="#") 3.x Config Migrator
 
