Add option to specify file name when creating a backup

--- a/resources/stylus/style.styl
+++ b/resources/stylus/style.styl
@@ -30,11 +30,17 @@ select#process
   font-size: 95%
   
 form
-    padding-top 15px
-    
+  padding-top 15px
+  
 .container
-    min-width 300px
-    
+  min-width 300px
+
+.fileName
+  margin-top 15px
+
+label[for=fileName]
+  padding-left 0
+  
 .bs-callout
     margin: 20px 0;
     padding: 20px;
