--- a/resources/jade/index.jade
+++ b/resources/jade/index.jade
@@ -24,8 +24,14 @@ block content
                 input(type='checkbox', data-name="system", checked)
               each val in [0, 1, 2, 3, 4, 5, 6, 7]
                 label.checkbox Process #{val + 1}
-                  input(type='checkbox', data-name="process", data-id=val, checked) 
+                  input(type='checkbox', data-name="process", data-id=val, checked)
+              .form-group.form-inline.fileName
+                label.control-label.col-sm-2(for='fileName') Backup to file:
+                .input-group.col-sm-3
+                  input.form-control(type='text', data-name='fileName', placeholder='bcs-backup')
+                  .input-group-addon .json
             button.btn.btn-primary.disabled(id='backup') Begin Backup
+
   
       .tab-pane(id="restore")
         form
