--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@ select#process{width:13em;margin-right:5px}
 .label{font-size:95%}
 form{padding-top:15px}
 .container{min-width:300px}
+.fileName{margin-top:15px}
+label[for=fileName]{padding-left:0}
 .bs-callout{margin:20px 0;padding:20px;border-left:3px solid #eee}
 .bs-callout-warning{background-color:#fcf8f2;border-color:#f0ad4e}
 .bs-callout-warning h4{color:#f0ad4e}
