--- a/resources/jade/index.jade
+++ b/resources/jade/index.jade
@@ -14,10 +14,15 @@ block content
       .tab-pane.active(id="backup")
         form
           fieldset
-            div.form-group
+            .form-group
               label.control-label(for='bcs') BCS 4.0 Device:
               input.form-control(type='url', data-name='bcs', data-tab='backup', placeholder='http://192.168.1.5/')
               i.icon-ok.pull-right.checkmark
+              .credentials.hide
+                label.control-label Username: 
+                input.form-control(type='text', disabled, value='admin')
+                label.control-label(for='password') Password:
+                input.form-control(type='password', data-name='password', data-tab='backup')
               
             div#backup-options.form-group.hide
               label.checkbox  System Settings
