Style tweaks to restore options list

--- a/resources/stylus/style.styl
+++ b/resources/stylus/style.styl
@@ -59,14 +59,19 @@ label[for=fileName]
     margin-bottom: 5px;
 
 .restoreOption
-    width 315px
+    width 335px
 
-.restoreOption span
-    text-decoration underline
-    font-weight bold
-    display inline-block
-    margin-top 10px
+    span
+        text-decoration underline
+        font-weight bold
+        display inline-block
+        margin-top 10px
     
-.restoreOption label
-    width 178px
-    display inline-block
+    label
+        display inline-block
+
+    select
+        float right
+        margin-top 9px
+        margin-bottom 9px
+
